; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dwarf2dbg.c_out_set_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_dwarf2dbg.c_out_set_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32*, i32 }

@DW_LNS_extended_op = common dso_local global i32 0, align 4
@sizeof_address = common dso_local global i64 0, align 8
@DW_LNE_set_address = common dso_local global i32 0, align 4
@O_symbol = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @out_set_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @out_set_addr(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32, i32* @DW_LNS_extended_op, align 4
  %5 = call i32 @out_opcode(i32 %4)
  %6 = load i64, i64* @sizeof_address, align 8
  %7 = add nsw i64 %6, 1
  %8 = call i32 @out_uleb128(i64 %7)
  %9 = load i32, i32* @DW_LNE_set_address, align 4
  %10 = call i32 @out_opcode(i32 %9)
  %11 = load i32, i32* @O_symbol, align 4
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 2
  store i32 %11, i32* %12, align 8
  %13 = load i32*, i32** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  store i32* %13, i32** %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i64 0, i64* %15, align 8
  %16 = load i64, i64* @sizeof_address, align 8
  %17 = call i32 @emit_expr(%struct.TYPE_3__* %3, i64 %16)
  ret void
}

declare dso_local i32 @out_opcode(i32) #1

declare dso_local i32 @out_uleb128(i64) #1

declare dso_local i32 @emit_expr(%struct.TYPE_3__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
